# zac

./: CMakeLists.txt  README.md  Toolchain-win32.cmake  audio.hpp  gtdc.cpp  gui.cpp  gui.h  human.cpp  human.h  renderer.cpp  renderer.h  world.cpp  world.h
glm/: Makefile  cmake_install.cmake  glm
media/: arial.txt
